--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "dbg_pintos"
+            "preLaunchTask": "dbg_userprog"
         }
     ],
     "inputs": [
