--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "inttypes.h": "c",
         "interrupt.h": "c",
         "syscall.h": "c",
-        "main.h": "c"
+        "main.h": "c",
+        "malloc.h": "c"
     }
 }
