--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "interrupt.h": "c",
         "syscall.h": "c",
         "main.h": "c",
-        "malloc.h": "c"
+        "malloc.h": "c",
+        "*.inc": "c"
     }
 }
